# english-language-helper

./: .gitignore  LICENSE  README.md  logger_config.py  main.py  prog_style.md  pyproject.toml  schemas.py
cli/: __init__.py  exam_generator_cli.py  firestore_admin.py  firestore_utils.py  listening_activity_adder.py  llm_article_generator.py  web_scraper_article_adder.py
cli/exam_logic/: __init__.py  exam_generation_utils.py  fill_in_the_blank_generator.py  listening_comprehension_generator.py  picture_description_generator.py  reading_comprehension_generator.py  sentence_translation_generator.py  spelling_correction_generator.py
notebooks/: firesore_query_structure.ipynb  firestore_setup.ipynb  genrate_llm_article.ipynb
notebooks/.ipynb_checkpoints/: firesore_query_structure-checkpoint.ipynb  firestore_setup-checkpoint.ipynb
sections/: __init__.py  genai_reading_tab.py  listening_tab.py  questions_tab.py  quizzes_tab.py  reading_comp_generator.py  reading_tab.py  saved_words_tab.py  welcome_tab.py
