[project]
name = "english-language-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.45.1",
    "firebase-admin>=6.5.0", # Add this dependency for Firebase Admin SDK
    "click>=8.1.7", # Add this dependency for building CLIs
    "requests>=2.32.4",
    "trafilatura>=2.0.0",
    "goose3>=3.1.19",
    "openai>=1.3.0", # Added for OpenAI API interaction
    "google-generativeai>=0.5.0", # Added for Google Gemini API
    "pydantic>=2.0.0", # Added for data validation
    "dotenv>=0.9.9",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "ruff-lsp>=0.0.62",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "notebooks",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
